# microBRRRute_studio

./: .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  MBSEQ_Studio.spec  README.md  TODO.md  around_the_world.mbseq  build_windows_exe.bat  example_asd.mbseq  main.py  microBRRRute_Studio.spec  pyproject.toml  requirements-dev.txt  run_from_source.bat
.github/workflows/: ci.yml  release.yml
mbseq_studio/: app.py  mbseq.py  midi_export.py  synth.py
microbrrrute_studio/: __init__.py  app.py  mbseq.py  midi_export.py  synth.py
tests/: test_app_logic.py  test_mbseq.py
