[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mbseq-studio"
version = "0.4.0"
description = "Desktop composer for Arturia MicroBrute SE .mbseq sequences"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tom Stocker" }]
keywords = ["microbrute", "arturia", "sequencer", "midi", "synthesizer"]
# Runtime depends only on the standard library + Tkinter (a system package).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
mbseq-studio = "mbseq_studio.app:main"

[project.urls]
Homepage = "https://github.com/Whichcraft/mbseq_studio"
Changelog = "https://github.com/Whichcraft/mbseq_studio/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["mbseq_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
