[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "microbrrrute-studio"
dynamic = ["version"]
description = "Desktop composer for Arturia MicroBrute SE .mbseq sequences"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tom Stocker" }]
keywords = ["microbrute", "arturia", "sequencer", "midi", "synthesizer"]
# Runtime depends only on the standard library + Tkinter (a system package).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff", "mypy"]
build = ["pyinstaller>=6.0"]

[project.scripts]
microbrrrute-studio = "microbrrrute_studio.app:main"

[project.urls]
Homepage = "https://github.com/Whichcraft/microBRRRute_studio"
Changelog = "https://github.com/Whichcraft/microBRRRute_studio/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["microbrrrute_studio"]

[tool.setuptools.dynamic]
version = { attr = "microbrrrute_studio.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
